@@ -1,18 +1,19 @@
 package com.shazam.fork.model;
 
-import com.google.common.base.Predicate;
 import com.google.common.collect.HashMultimap;
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Multimaps;
 import com.google.common.collect.SetMultimap;
 
-import static com.google.common.collect.FluentIterable.from;
+import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * Class that keeps track of the number of times each testCase is executed for device.
  */
 public class PoolTestCaseFailureAccumulator implements PoolTestCaseAccumulator {
 
-    private SetMultimap<Pool, TestCaseEventCounter> map = HashMultimap.<Pool, TestCaseEventCounter>create();
+    private SetMultimap<Pool, TestCaseEventCounter> map = Multimaps.synchronizedSetMultimap(HashMultimap.<Pool, TestCaseEventCounter>create());
 
     @Override
     public void record(Pool pool, TestCaseEvent testCaseEvent) {
@@ -20,13 +21,12 @@ public class PoolTestCaseFailureAccumulator implements PoolTestCaseAccumulator {
             map.put(pool, createNew(testCaseEvent));
         }
 
-        if (!from(map.get(pool)).anyMatch(isSameTestCase(testCaseEvent))) {
+        if (map.get(pool).stream().noneMatch(isSameTestCase(testCaseEvent))) {
             map.get(pool).add(
                     createNew(testCaseEvent)
                             .withIncreasedCount());
         } else {
-            from(map.get(pool))
-                    .firstMatch(isSameTestCase(testCaseEvent)).get()
+            map.get(pool).stream().filter(isSameTestCase(testCaseEvent)).findFirst().get()
                     .increaseCount();
         }
     }
@@ -34,8 +34,7 @@ public class PoolTestCaseFailureAccumulator implements PoolTestCaseAccumulator {
     @Override
     public int getCount(Pool pool, TestCaseEvent testCaseEvent) {
         if (map.containsKey(pool)) {
-            return from(map.get(pool))
-                    .firstMatch(isSameTestCase(testCaseEvent)).or(TestCaseEventCounter.EMPTY)
+            return map.get(pool).stream().filter(isSameTestCase(testCaseEvent)).findFirst().orElse(TestCaseEventCounter.EMPTY)
                     .getCount();
         } else {
             return 0;
@@ -45,8 +44,7 @@ public class PoolTestCaseFailureAccumulator implements PoolTestCaseAccumulator {
     @Override
     public int getCount(TestCaseEvent testCaseEvent) {
         int result = 0;
-        ImmutableList<TestCaseEventCounter> counters = from(map.values())
-                .filter(isSameTestCase(testCaseEvent)).toList();
+        List<TestCaseEventCounter> counters = map.values().stream().filter(isSameTestCase(testCaseEvent)).collect(Collectors.toList());
         for (TestCaseEventCounter counter : counters) {
             result += counter.getCount();
         }
@@ -58,12 +56,7 @@ public class PoolTestCaseFailureAccumulator implements PoolTestCaseAccumulator {
     }
 
     private static Predicate<TestCaseEventCounter> isSameTestCase(final TestCaseEvent testCaseEvent) {
-        return new Predicate<TestCaseEventCounter>() {
-            @Override
-            public boolean apply(TestCaseEventCounter input) {
-                return input.getTestCaseEvent() != null
-                        && testCaseEvent.equals(input.getTestCaseEvent());
-            }
-        };
+        return input -> input.getTestCaseEvent() != null
+                && testCaseEvent.equals(input.getTestCaseEvent());
     }
 }
